# apple-ie

./: .gitignore  6502.md  Cargo.toml  README.md  }
.github/workflows/: analysis.yml
src/: main.rs  tests.rs
src/assembler/: mod.rs
src/cpu/: instruction_info.rs  mod.rs  operations.rs
src/memory/: mod.rs
