[package]
name = "apple-ie"
version = "0.1.0"
edition = "2021"
authors = ["Daniil Rose <daniil.rose@posteo.org>"]
description = "The Apple Ie, an Apple I emulator written in Rust."
homepage = "https://www.daniilrose.com/"
repository = "https://github.com/TheCatster/apple-ie"
license = "GPL-3.0"
keywords = ["cli", "emulator", "apple", "asm"]
categories = ["command-line-utilities", "emulators"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
